js/js.translator/testData/incremental/invalidation/classWithJsExportAndSuspendFunction/lib1/lib.1.kt
@JsExport
abstract class Foo {
    open suspend fun foo() = 1
}
